--- a/Tutorial Constructors/Tutorial Constructors.csproj
+++ b/Tutorial Constructors/Tutorial Constructors.csproj
@@ -42,8 +42,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ExplicitConDemo.cs" />
-    <Compile Include="Program.cs" />
+    <Compile Include="CopyConDemo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
